clean up createartifact
